Set right overlay on html to fix scrollbar overlaying the html

--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -7,6 +7,9 @@ $primary-invert: #ffffff;
 $secondary: #ffffff;
 $gray: #fafafa;
 
+html
+  overflow: overlay
+
 body
   font-family:"effra" !important
   font-size: 22px
@@ -98,7 +101,7 @@ a:hover
     min-height: 130px
   .menu-opener
     position: absolute
-    right: 40px
+    right: 20px
     top: 86px
   .menuactive
     .footerSocial
